# xyolo

./: .gitignore  MANIFEST.in  README-CN.md  README.md  pyproject.toml  xyolo
docs/design/: dataset-management.md  evaluation-metrics.md  multi-end-login.md  overall-platform-design.md  toolchain-interface.md  training-page.md
src/xyolo/: __init__.py  cli.py  swanlab_train.py  web.py  worker.py
src/xyolo/static/: index.html
src/xyolo/static/assets/: index-BKct44o3.js  index-BLXNBD2H.js  index-CgPVjNrK.css  index-DWIcIZcQ.css
web/: server.py  task_worker.py
web/ui/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/ui/src/: App.tsx  index.css
web/ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  tabs.tsx  textarea.tsx
